tests/evaluator/should_pass/trace_watchdog.csp
channel a 

external trace_watchdog

channel x

procTest1 = trace_watchdog(STOP, {a}, x)
