tests/evaluator/should_fail/prioritisepo_1.csp
external prioritisepo

channel a, b
procTest1 = prioritisepo(STOP, {(a, b), (b, a)}, {a})
